--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -41,7 +41,8 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=\u533b\u9662\u95e8\u8bca\u836f\u623f\u7ba1\u7406\u7cfb\u7edf
+#productName=\u533b\u9662\u95e8\u8bca\u836f\u623f\u7ba1\u7406\u7cfb\u7edf
+productName=Test
 copyrightYear=2016
 version=V1.2.7
 
